room domain 수정